# NIL-settlement-athletes

./: .gitignore  README.md  pyproject.toml
scripts/: parse_athletes.py
src/: config.py
src/data/: parser.py
src/discovery/: base.py  instagram.py  linkedin.py  twitter.py
src/models/: athlete.py  profile.py
src/pipeline/: deduplicate.py  processor.py
src/utils/: parsing.py
src/verification/: matcher.py
tests/: test_deduplication.py  test_models.py  test_parser.py  test_parsing.py
