[tool.poetry]
name = "nil_settlement_athletes"
version = "0.1.0"
description = "NCAA athlete contact discovery for NIL settlement claims"
authors = ["Litigation Finance Company"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
apify-client = "^1.6.0"
pydantic = "^2.0.0"
tenacity = "^8.2.0"
aiohttp = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
